--- a/Sheaft.Web.Jobs/appsettings.json
+++ b/Sheaft.Web.Jobs/appsettings.json
@@ -41,6 +41,7 @@
     "Percent": 0.018,
     "UserId": "##REPLACE##",
     "WalletId": "##REPLACE##",
+    "DocumentWalletId": "##REPLACE##",
     "Bank": {
       "Id": "##REPLACE##",
       "Iban": "##REPLACE##",
