--- a/Sheaft.Application.Queries.Tests/Sheaft.Application.Queries.Tests.csproj
+++ b/Sheaft.Application.Queries.Tests/Sheaft.Application.Queries.Tests.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Sheaft.Application.Interop\Sheaft.Application.Interop.csproj" />
     <ProjectReference Include="..\Sheaft.Application.Queries\Sheaft.Application.Queries.csproj" />
+    <ProjectReference Include="..\Sheaft.Infrastructure.Services\Sheaft.Infrastructure.Services.csproj" />
     <ProjectReference Include="..\Sheaft.Tests.Common\Sheaft.Tests.Common.csproj" />
   </ItemGroup>
 
