#DLF-156 - Paramètre par défaut manquant pour le suggesterProducers

--- a/Sheaft.Web.Api/appsettings.json
+++ b/Sheaft.Web.Api/appsettings.json
@@ -70,6 +70,11 @@
       "products": "products",
       "producers": "producers",
       "stores": "stores"
+    },
+    "suggesters": {
+      "products": "suggest-products",
+      "producers": "suggest-producers",
+      "stores": "suggest-stores"
     }
   },
   "Sirene": {
