--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,55 +1,111 @@
 {
-   // Use IntelliSense to find out which attributes exist for C# debugging
-   // Use hover for the description of the existing attributes
-   // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
-    {
-        "name": ".NET Core Launch (api)",
-        "type": "coreclr",
-        "request": "launch",
-        "preLaunchTask": "build",
-        "program": "${workspaceFolder}/Sheaft.Api/bin/Debug/netcoreapp3.1/Sheaft.Api.dll",
-        "args": [],
-        "cwd": "${workspaceFolder}/Sheaft.Api",
-        "stopAtEntry": false,
-        "serverReadyAction": {
-            "action": "openExternally",
-            "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
-        },
-        "env": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
-        },
-        "sourceFileMap": {
-            "/Views": "${workspaceFolder}/Views"
-        }
-    },
-    {
-        "name": ".NET Core Attach",
-        "type": "coreclr",
-        "request": "attach",
-        "processId": "${command:pickProcess}"
-    },
-    {
-        "name": "Attach to .NET Functions",
-        "type": "coreclr",
-        "request": "attach",
-        "processId": "${command:azureFunctions.pickProcess}"
-    },
+       {
+           "name": "Jobs",
+           "type": "coreclr",
+           "request": "launch",
+           "preLaunchTask": "build",
+           "program": "${workspaceFolder}/api/Sheaft.Web.Jobs/bin/Debug/netcoreapp3.1/Sheaft.Web.Jobs.dll",
+           "args": [],
+           "cwd": "${workspaceFolder}/api/Sheaft.Web.Jobs",
+           "stopAtEntry": false,
+           "serverReadyAction": {
+               "action": "openExternally",
+               "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+           },
+           "env": {
+               "ASPNETCORE_ENVIRONMENT": "Development"
+           },
+           "sourceFileMap": {
+               "/Views": "${workspaceFolder}/Views"
+           }
+       },
+       {
+           "name": "Manage",
+           "type": "coreclr",
+           "request": "launch",
+           "preLaunchTask": "build",
+           "program": "${workspaceFolder}/api/Sheaft.Web.Manage/bin/Debug/netcoreapp3.1/Sheaft.Web.Manage.dll",
+           "args": [],
+           "cwd": "${workspaceFolder}/api/Sheaft.Web.Manage",
+           "stopAtEntry": false,
+           "serverReadyAction": {
+               "action": "openExternally",
+               "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+           },
+           "env": {
+               "ASPNETCORE_ENVIRONMENT": "Development"
+           },
+           "sourceFileMap": {
+               "/Views": "${workspaceFolder}/Views"
+           }
+       },
+       {
+           "name": "Signalr",
+           "type": "coreclr",
+           "request": "launch",
+           "preLaunchTask": "build",
+           "program": "${workspaceFolder}/api/Sheaft.Web.Signalr/bin/Debug/netcoreapp3.1/Sheaft.Web.Signalr.dll",
+           "args": [],
+           "cwd": "${workspaceFolder}/api/Sheaft.Web.Signalr",
+           "stopAtEntry": false,
+           "serverReadyAction": {
+               "action": "openExternally",
+               "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+           },
+           "env": {
+               "ASPNETCORE_ENVIRONMENT": "Development"
+           },
+           "sourceFileMap": {
+               "/Views": "${workspaceFolder}/Views"
+           }
+       },
+       {
+           "name": "Payment",
+           "type": "coreclr",
+           "request": "launch",
+           "preLaunchTask": "build",
+           "program": "${workspaceFolder}/api/Sheaft.Web.Payment/bin/Debug/netcoreapp3.1/Sheaft.Web.Payment.dll",
+           "args": [],
+           "cwd": "${workspaceFolder}/api/Sheaft.Web.Payment",
+           "stopAtEntry": false,
+           "serverReadyAction": {
+               "action": "openExternally",
+               "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+           },
+           "env": {
+               "ASPNETCORE_ENVIRONMENT": "Development"
+           },
+           "sourceFileMap": {
+               "/Views": "${workspaceFolder}/Views"
+           }
+       },
         {
-            "name": "Launch Portal",
-            "type": "chrome",
+            "name": "GraphQL",
+            "type": "coreclr",
             "request": "launch",
-            "url": "http://localhost:4200",
-            "webRoot": "${workspaceFolder}/Sheaft.Portal/public"
+            "preLaunchTask": "build",
+            "program": "${workspaceFolder}/api/Sheaft.Web.Api/bin/Debug/netcoreapp3.1/Sheaft.Web.Api.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/api/Sheaft.Web.Api",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
         },
         {
-            "name": "Attach to portal",
-            "type": "chrome",
+            "name": ".NET Core Attach",
+            "type": "coreclr",
             "request": "attach",
-            "port": 9222,
-            "url": "http://localhost:4200",
-            "webRoot": "${workspaceFolder}/Sheaft.Portal/public"
+            "processId": "${command:pickProcess}"
         }
-]
+    ]
 }
