--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,93 +2,43 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "watch",
+      "label": "build",
       "command": "dotnet",
       "type": "process",
       "args": [
-        "watch",
-        "run",
-        "${workspaceFolder}/Sheaft.Api/Sheaft.Api.csproj",
+        "build",
+        "${workspaceFolder}/Sheaft.sln",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
       "problemMatcher": "$msCompile"
     },
     {
+        "label": "watch_api",
+        "command": "dotnet",
+        "type": "process",
+        "args": [
+            "watch",
+            "--project",
+            "${workspaceFolder}/Sheaft.Web.Api/Sheaft.Web.Api.csproj",
+            "run",
+            "${workspaceFolder}/Sheaft.Web.Api/Sheaft.Web.Api.csproj",
+            "/property:GenerateFullPaths=true",
+            "/consoleloggerparameters:NoSummary"
+        ],
+        "problemMatcher": "$msCompile"
+    },
+    {
       "label": "clean",
       "command": "dotnet",
       "args": [
         "clean",
+        "${workspaceFolder}/api/Sheaft.sln",
         "/property:GenerateFullPaths=true",
         "/consoleloggerparameters:NoSummary"
       ],
       "type": "process",
-      "problemMatcher": "$msCompile",
-      "options": {
-        "cwd": "${workspaceFolder}/Sheaft.Functions"
-      }
-    },
-    {
-      "label": "build",
-      "command": "dotnet",
-      "args": [
-        "build",
-        "/property:GenerateFullPaths=true",
-        "/consoleloggerparameters:NoSummary"
-      ],
-      "type": "process",
-      "dependsOn": "clean",
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
-      "problemMatcher": "$msCompile",
-      "options": {
-        "cwd": "${workspaceFolder}/Sheaft.Functions"
-      }
-    },
-    {
-      "label": "clean release",
-      "command": "dotnet",
-      "args": [
-        "clean",
-        "--configuration",
-        "Release",
-        "/property:GenerateFullPaths=true",
-        "/consoleloggerparameters:NoSummary"
-      ],
-      "type": "process",
-      "problemMatcher": "$msCompile",
-      "options": {
-        "cwd": "${workspaceFolder}/Sheaft.Functions"
-      }
-    },
-    {
-      "label": "publish",
-      "command": "dotnet",
-      "args": [
-        "publish",
-        "--configuration",
-        "Release",
-        "/property:GenerateFullPaths=true",
-        "/consoleloggerparameters:NoSummary"
-      ],
-      "type": "process",
-      "dependsOn": "clean release",
-      "problemMatcher": "$msCompile",
-      "options": {
-        "cwd": "${workspaceFolder}/Sheaft.Functions"
-      }
-    },
-    {
-      "type": "func",
-      "dependsOn": "build",
-      "options": {
-        "cwd": "${workspaceFolder}/Sheaft.Functions/bin/Debug/netcoreapp3.1"
-      },
-      "command": "host start",
-      "isBackground": true,
-      "problemMatcher": "$func-watch"
+      "problemMatcher": "$msCompile"
     }
   ]
 }
