Fix - Correction des dockerfile suite au refactoring de la solution

--- a/Sheaft.Web.Api/Dockerfile
+++ b/Sheaft.Web.Api/Dockerfile
@@ -11,25 +11,11 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["Sheaft.Web.Api/Sheaft.Web.Api.csproj", "Sheaft.Web.Api/"]
 COPY ["Sheaft.Web.Common/Sheaft.Web.Common.csproj", "Sheaft.Web.Common/"]
-COPY ["Sheaft.GraphQL.Types/Sheaft.GraphQL.Types.csproj", "Sheaft.GraphQL.Types/"]
-COPY ["Sheaft.GraphQL.Services/Sheaft.GraphQL.Services.csproj", "Sheaft.GraphQL.Services/"]
-COPY ["Sheaft.Application.Queries/Sheaft.Application.Queries.csproj", "Sheaft.Application.Queries/"]
-COPY ["Sheaft.Application.Mappers/Sheaft.Application.Mappers.csproj", "Sheaft.Application.Mappers/"]
-COPY ["Sheaft.Application.Commands/Sheaft.Application.Commands.csproj", "Sheaft.Application.Commands/"]
-COPY ["Sheaft.Application.Interop/Sheaft.Application.Interop.csproj", "Sheaft.Application.Interop/"]
-COPY ["Sheaft.Application.Models/Sheaft.Application.Models.csproj", "Sheaft.Application.Models/"]
+COPY ["Sheaft.GraphQL/Sheaft.GraphQL.csproj", "Sheaft.GraphQL/"]
+COPY ["Sheaft.Application.Sheaft.Application.csproj", "Sheaft.Application/"]
 COPY ["Sheaft.Domain/Sheaft.Domain.csproj", "Sheaft.Domain/"]
-COPY ["Sheaft.Core/Sheaft.Core.csproj", "Sheaft.Core/"]
-COPY ["Sheaft.Exceptions/Sheaft.Exceptions.csproj", "Sheaft.Exceptions/"]
-COPY ["Sheaft.Options/Sheaft.Options.csproj", "Sheaft.Options/"]
-COPY ["Sheaft.Infrastructure.Persistence/Sheaft.Infrastructure.Persistence.csproj", "Sheaft.Infrastructure.Persistence/"]
+COPY ["Sheaft.Infrastructure/Sheaft.Infrastructure.csproj", "Sheaft.Infrastructure/"]
 COPY ["Sheaft.Localization/Sheaft.Localization.csproj", "Sheaft.Localization/"]
-COPY ["Sheaft.GraphQL.Enums/Sheaft.GraphQL.Enums.csproj", "Sheaft.GraphQL.Enums/"]
-COPY ["Sheaft.GraphQL.Sorts/Sheaft.GraphQL.Sorts.csproj", "Sheaft.GraphQL.Sorts/"]
-COPY ["Sheaft.GraphQL.Filters/Sheaft.GraphQL.Filters.csproj", "Sheaft.GraphQL.Filters/"]
-COPY ["Sheaft.Application.Handlers/Sheaft.Application.Handlers.csproj", "Sheaft.Application.Handlers/"]
-COPY ["Sheaft.Infrastructure.Services/Sheaft.Infrastructure.Services.csproj", "Sheaft.Infrastructure.Services/"]
-COPY ["Sheaft.Application.Events/Sheaft.Application.Events.csproj", "Sheaft.Application.Events/"]
 RUN dotnet restore "Sheaft.Web.Api/Sheaft.Web.Api.csproj"
 COPY . .
 WORKDIR "/src/Sheaft.Web.Api"
